Remove images from git

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,9 +13,10 @@
     "@notionhq/client": "^2.2.3",
     "@sanity/client": "^3.4.1",
     "co": "^4.6.0",
-    "dotenv": "^16.0.3",
     "concat-md": "^0.5.1",
+    "dotenv": "^16.0.3",
     "front-matter": "^4.0.2",
+    "fs-extra": "^11.1.1",
     "hexo": "^6.3.0",
     "hexo-admonition": "^1.1.2",
     "hexo-cli": "^4.3.0",
