--- a/.github/workflows/release-cut-off-release-branch.yml
+++ b/.github/workflows/release-cut-off-release-branch.yml
@@ -1,4 +1,4 @@
-name: "Cut off release branch"
+name: "Release: Cut off release branch"
 
 on:
   workflow_dispatch:
@@ -14,13 +14,16 @@ on:
         type: string
 
 env:
-  PYTHON_VERSION_FILE: "label_studio/__init__.py"
   RELEASE_BRANCH_PREFIX: "ls-release"
 
 jobs:
   draft-new-release:
     name: "Draft new release/hotfix"
     runs-on: ubuntu-latest
+    outputs:
+      next_develop_version: ${{ steps.calculate_branch_name_and_version.outputs.next_develop_version }}
+      release_version: ${{ steps.calculate_branch_name_and_version.outputs.release_version }}
+      release_branch: ${{ steps.calculate_branch_name_and_version.outputs.release_branch }}
     steps:
       - uses: hmarr/debug-action@v2.1.0
 
@@ -142,87 +145,20 @@ jobs:
                 });
             }
 
-      - name: Commit version files to release branch
-        id: make-release-commit
-        run: |
-          set -euo pipefail
-          
-          git checkout -b "${{ steps.calculate_branch_name_and_version.outputs.release_branch }}"
-          
-          sed -i "s/^__version__[ ]*=.*/__version__ = '${{ steps.calculate_branch_name_and_version.outputs.release_version }}'/g" ${{ env.PYTHON_VERSION_FILE }}
-          
-          git add ${{ env.PYTHON_VERSION_FILE }}
-          git commit --message "ci: cut release ${{ steps.calculate_branch_name_and_version.outputs.release_version }}"
+  set-version-default-branch:
+    uses: heartexlabs/label-studio/.github/workflows/release-set-version.yml@develop
+    needs:
+      - draft-new-release
+    with:
+      version: ${{ needs.draft-new-release.outputs.next_develop_version }}
+      branch: ${{ github.event.repository.default_branch }}
+    secrets: inherit
 
-          echo "commit=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-          git push origin HEAD:refs/heads/${{ steps.calculate_branch_name_and_version.outputs.release_branch }}
-
-      - uses: actions/cache@v3
-        name: Configure pip cache
-        id: pip-cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-gh-actions-${{ hashFiles('.github/helpers/gh_jira_comparisonator/requirements.txt') }}-${{ hashFiles('.github/helpers/gh_changelog_generator/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-gh-actions-
-
-      - name: Commit version files to 'develop'
-        id: make-develop-commit
-        run: |
-          set -euo pipefail
-          
-          git checkout '${{ github.event.repository.default_branch }}'
-          
-          branch='bump-version-${{ steps.calculate_branch_name_and_version.outputs.next_develop_version }}'
-          echo "branch=${branch}" >> $GITHUB_OUTPUT
-          git checkout -b "${branch}"
-          
-          sed -i "s/^__version__[ ]*=.*/__version__ = '${{ steps.calculate_branch_name_and_version.outputs.next_develop_version }}'/g" ${{ env.PYTHON_VERSION_FILE }}
-          
-          git add ${{ env.PYTHON_VERSION_FILE }}
-          git commit --message "chore: Bump version to ${{ steps.calculate_branch_name_and_version.outputs.next_develop_version }}"
-
-          echo "commit=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-          git push origin HEAD:refs/heads/${branch}
-
-      - name: Create PR to 'develop'
-        uses: actions/github-script@v6
-        id: create-pr
-        with:
-          github-token: ${{ secrets.GIT_PAT }}
-          script: |
-            const { repo, owner } = context.repo;
-            const createPullResponse = await github.rest.pulls.create({
-              title: 'chore: Bump version to ${{ steps.calculate_branch_name_and_version.outputs.next_develop_version }}',
-              owner,
-              repo,
-              head: '${{ steps.make-develop-commit.outputs.branch }}',
-              base: '${{ github.event.repository.default_branch }}',
-              body: [
-                'Hi @${{ github.actor }}!',
-                '',
-                'This PR was created in response to a manual trigger of the release workflow here: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.',
-              ].join('\n')
-            });
-            github.rest.pulls.requestReviewers({
-              owner,
-              repo,
-              pull_number: createPullResponse.data.number,
-               reviewers: [ '${{ github.actor }}' ]
-            });
-            return createPullResponse
-
-      - name: Enable AutoMerge
-        id: enable-pr-automerge
-        shell: bash
-        run: |
-          echo ${{ secrets.GIT_PAT }} | gh auth login --with-token
-          gh api graphql -f pull='${{ fromJson(steps.create-pr.outputs.result).data.node_id }}' -f query='
-            mutation($pull: ID!) {
-              enablePullRequestAutoMerge(input: {pullRequestId: $pull, mergeMethod: SQUASH}) {
-                pullRequest {
-                  id
-                  number
-                }
-              }
-            }'
+  set-version-release-branch:
+    uses: heartexlabs/label-studio/.github/workflows/release-set-version.yml@develop
+    needs:
+      - draft-new-release
+    with:
+      version: ${{ needs.draft-new-release.outputs.release_version }}
+      branch: ${{ needs.draft-new-release.outputs.release_branch }}
+    secrets: inherit
