--- a/.github/workflows/release-set-version.yml
+++ b/.github/workflows/release-set-version.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           set -xeuo pipefail
           
-          regexp='^[v]?([0-9]+)\.([0-9]+)\.([0-9]+)$';
+          regexp='^[v]?([0-9]+)\.([0-9]+)\.([0-9]+)[a-zA-Z0-9-]*$'
           
           if [[ "${{ inputs.version }}" =~ $regexp ]]; then
               echo "${{ inputs.version }} does match the regexp ${regexp}"
