--- a/label_studio/tests/data_export.tavern.yml
+++ b/label_studio/tests/data_export.tavern.yml
@@ -339,3 +339,42 @@ stages:
       url: '{django_live_url}/api/projects/{project_pk}/export?exportType=JSON_MIN'
     response:
       status_code: 200
+
+---
+test_name: export_delete
+strict: false
+marks:
+  - usefixtures:
+      - django_live_url
+stages:
+  - id: signup
+    type: ref
+  - id: create_project
+    type: ref
+  - id: create_task
+    type: ref
+  - name: create export
+    request:
+      url: "{django_live_url}/api/projects/{project_pk}/exports/"
+      method: POST
+      json:
+        task_filter_options:
+          only_with_annotations: true
+    response:
+      status_code: 201
+      save:
+        json:
+          export_id: id
+      verify_response_with:
+        function: label_studio.tests.utils:file_exists_in_storage
+  - name: delete export
+    request:
+      url: "{django_live_url}/api/projects/{project_pk}/exports/{export_id}/"
+      method: POST
+      json:
+        task_filter_options:
+          only_with_annotations: true
+    response:
+      verify_response_with:
+        function: label_studio.tests.utils:file_exists_in_storage
+---
