--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 
-# rotating logs so they do not overflow your dev system in case of crash loops
+# rotating logs, so they do not overflow
 x-logging:
   logging: &default-logging
     driver: "local"
@@ -82,52 +82,9 @@ services:
     networks:
       database-network:
 
-  # not replicated setup for test setup, use aws S3 or minio cluster in production
-  minio:
-    image: quay.io/minio/minio:RELEASE.2023-03-13T19-46-17Z
-    command: server /data --console-address ":9009"
-    restart: unless-stopped
-    logging: *default-logging
-    # open parts for debugging todo move to nginx
-    ports:
-      - "9000:9000"
-      - "9009:9009"
-    volumes:
-      - minio-data:/data
-    #    env_file:
-    #      - ./.env
-    # configure env vars in .env file or your systems environment
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
-
-      - MINIO_PROMETHEUS_URL=${MINIO_PROMETHEUS_URL:-http://prometheus:9090}
-      - MINIO_PROMETHEUS_AUTH_TYPE=${MINIO_PROMETHEUS_AUTH_TYPE:-public}
-    networks:
-      - database-network
-    profiles:
-      - minio
-
-  prometheus:
-    image: quay.io/prometheus/prometheus:v2.37.1
-    restart: unless-stopped
-    logging: *default-logging
-    #    ports:
-    #      - "9090:9090"
-    volumes:
-      - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
-      - "prometheus-data:/prometheus"
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    networks:
-      - database-network
-    profiles:
-      - minio
-
 volumes:
   static: { }
-  minio-data:
-  prometheus-data:
+
 networks:
   database-network:
   frontend-network:
