ci: SRE-473: Update feature-flags workflow

--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -6,6 +6,12 @@ on:
       ref:
         required: true
         type: string
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: "Ref"
+        required: true
+        type: string
 
 env:
   NODE: 14
