--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -99,7 +99,7 @@ jobs:
       github.event_name == 'pull_request' &&
       github.event.pull_request.head.repo.fork == false &&
       needs.changed_files.outputs.frontend == 'true' &&
-      needs.changed_files.outputs.commit-message != 'Build frontend'
+      needs.changed_files.outputs.commit-message != 'ci: Build frontend'
     permissions:
       contents: write
     uses: heartexlabs/label-studio/.github/workflows/frontend-build.yml@develop
@@ -113,7 +113,7 @@ jobs:
     if: |
       github.event_name == 'pull_request' &&
       github.event.pull_request.head.repo.fork == false &&
-      needs.changed_files.outputs.commit-message != 'Update Feature Flags'
+      needs.changed_files.outputs.commit-message != 'ci: Update Feature Flags'
     permissions:
       contents: write
     uses: heartexlabs/label-studio/.github/workflows/feature-flags-update.yml@develop
