chore: move prometheus.yml

--- a/docker-compose.minio.yml
+++ b/docker-compose.minio.yml
@@ -33,7 +33,7 @@ services:
     #    ports:
     #      - "9090:9090"
     volumes:
-      - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+      - "./prometheus/minio/prometheus.yml:/etc/prometheus/prometheus.yml"
       - "prometheus-data:/prometheus"
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
