--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -102,7 +102,7 @@ jobs:
       needs.changed_files.outputs.commit-message != 'ci: Build frontend'
     permissions:
       contents: write
-    uses: heartexlabs/label-studio/.github/workflows/frontend-build.yml@develop
+    uses: heartexlabs/label-studio/.github/workflows/frontend-build.yml@fb-lsdv-4894/update-node
     with:
       ref: ${{ github.event.pull_request.head.ref || github.ref }}
 
@@ -143,7 +143,7 @@ jobs:
     needs:
       - changed_files
     if: needs.changed_files.outputs.src == 'true'
-    uses: heartexlabs/label-studio/.github/workflows/tests.yml@develop
+    uses: heartexlabs/label-studio/.github/workflows/tests.yml@fb-lsdv-4894/update-node
     with:
       head_sha: ${{ github.event.pull_request.head.sha || github.event.after }}
     secrets: inherit
