--- a/.github/workflows/test_conda.yml
+++ b/.github/workflows/test_conda.yml
@@ -20,6 +20,11 @@ jobs:
       matrix:
         os: [ "ubuntu-latest", "windows-latest" ]
         python-version: [ "3.9" ]
+        include:
+          - os: "ubuntu-latest"
+            pip-cache-path: "~/.cache/pip"
+          - os: "windows-latest"
+            pip-cache-path: "~\\AppData\\Local\\pip\\Cache"
 
     steps:
       - uses: hmarr/debug-action@v2.1.0
@@ -46,19 +51,10 @@ jobs:
         name: Configure pip cache
         id: pip-cache
         with:
-          # Cache the Python package environment, excluding pip and setuptools and label_studio* installed by setup-python
-          path: |
-            ~/.cache/pip
-            ${{ env.pythonLocation }}/bin/*
-            ${{ env.pythonLocation }}/include
-            ${{ env.pythonLocation }}/lib/python*/site-packages/*
-            !${{ env.pythonLocation }}/bin/pip*
-            !${{ env.pythonLocation }}/lib/python*/site-packages/pip*
-            !${{ env.pythonLocation }}/lib/python*/site-packages/setuptools*
-            !${{ env.pythonLocation }}/lib/python*/site-packages/label_studio*
-          key: ${{ runner.os }}-pip-${{ env.pythonLocation }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-test.txt') }}
+          path: ${{ matrix.pip-cache-path }}
+          key: Conda-${{ env.CACHE_NAME_PREFIX }}-${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/requirements-test.txt') }}
           restore-keys: |
-            ${{ env.CACHE_NAME_PREFIX }}-${{ runner.os }}-pip-django-${{ env.pythonLocation }}-
+            Conda-${{ env.CACHE_NAME_PREFIX }}-${{ runner.os }}-pip-${{ matrix.python-version }}-
 
       - name: Install dependencies
         run: |
