--- a/label_studio/io_storages/s3/form_layout.yml
+++ b/label_studio/io_storages/s3/form_layout.yml
@@ -82,7 +82,7 @@ ImportStorage:
             name: presign_ttl
             label: Expiration minutes
             min: 1
-            value: 15
+            max: 15
             dependency: presign
 
 ExportStorage:
