reverting changes since this actually needs a different approach in the form

--- a/label_studio/io_storages/gcs/form_layout.yml
+++ b/label_studio/io_storages/gcs/form_layout.yml
@@ -60,7 +60,7 @@ ImportStorage:
             name: presign_ttl
             label: Expiration minutes
             min: 1
-            max: 15
+            value: 15
             dependency: presign
 
   # GCS credentials
