--- a/label_studio/tests/io_storages.tavern.yml
+++ b/label_studio/tests/io_storages.tavern.yml
@@ -225,7 +225,7 @@ stages:
   response:
     status_code: 200
     json:
-      status: "failed"
+      status: "completed"
       traceback: null
 
 ---
